--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/js-yaml": "^3.9.1",
     "core-js": "^2.4.1",
     "ngx-soap": "^0.2.1",
     "rxjs": "^5.1.0",
