--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/csvtojson": "^1.1.4",
     "@types/js-yaml": "^3.9.1",
+    "@types/json-2-csv": "^2.1.1",
     "core-js": "^2.4.1",
+    "csvtojson": "^1.1.7",
+    "json-2-csv": "^2.1.1",
     "ngx-soap": "^0.2.1",
     "rxjs": "^5.1.0",
     "transliteration": "^1.6.2",
