--- a/package.json
+++ b/package.json
@@ -12,44 +12,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.4.5",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/csvtojson": "^1.1.4",
     "@types/js-yaml": "^3.9.1",
     "@types/json-2-csv": "^2.1.1",
+    "@types/soap": "^0.18.0",
     "core-js": "^2.4.1",
     "csvtojson": "^1.1.7",
     "json-2-csv": "^2.1.1",
-    "ngx-soap": "^0.2.1",
+    "ng2-ace-editor": "^0.3.1",
+    "ngx-soap": "^0.2.2-beta4",
     "rxjs": "^5.1.0",
+    "soap": "^0.23.0",
     "transliteration": "^1.6.2",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "ejs.js": "^2.5.7"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.2",
+    "@angular/cli": "1.4.7",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "@types/jasmine": "2.6.0",
+    "@types/node": "~8.0.34",
+    "codelyzer": "~3.2.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "ts-node": "~3.3.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.5.3"
   }
 }
