--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     "@types/js-yaml": "^3.9.1",
     "@types/json-2-csv": "^2.1.1",
     "@types/soap": "^0.18.0",
+    "@types/xml2js": "^0.4.1",
     "core-js": "^2.4.1",
     "csvtojson": "^1.1.7",
+    "ejs.js": "^2.5.7",
     "json-2-csv": "^2.1.1",
     "ng2-ace-editor": "^0.3.1",
     "ngx-soap": "^0.2.2-beta4",
     "rxjs": "^5.1.0",
     "soap": "^0.23.0",
     "transliteration": "^1.6.2",
-    "zone.js": "^0.8.4",
-    "ejs.js": "^2.5.7"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.4.7",
